# takeoff-automation

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DOCKER_QUICK_REFERENCE.md  FRONTEND_MIGRATION_QUICK_PROMPT.txt  Makefile  PHASE_1B_DEPLOYMENT_NOTES.md  PHASE_2A_VERIFICATION.md  PHASE_PROMPTS.md  README.md  READY_FOR_TESTING.md  STATUS.md  VERIFICATION_CHECKLIST.md  docker-env.example  worker_logs.txt
backend/: alembic.ini  final_verification.py  pyproject.toml  requirements-base.txt  requirements-dev.txt  requirements-full.txt  requirements-ml.txt  requirements.txt  test_measurement_engine.py  test_ocr_verification.py  test_scale_detection.py  test_scale_integration.py  test_verification.py
backend/alembic/: env.py
backend/alembic/versions/: 066b86f9af2c_merge_heads.py  0f0c3a5014cf_add_export_jobs_table.py  0f19e78be270_add_detailed_classification_fields_to_.py  576b3ce9ef71_add_classification_fields_to_pages.py  71104d86fe9c_initial_schema.py  927c822fd041_merge_branches.py  a1b2c3d4e5f6_add_classification_history.py  b01e3b57e974_initial_schema.py  b2c3d4e5f6g7_add_status_to_classification_history.py  d5b881957963_increase_ocr_field_lengths.py  d707bfb8a266_add_fulltext_search.py  e1f2g3h4i5j6_add_measurement_engine_fields.py  f3g4h5i6j7k8_add_scale_detection_method.py  (+10 more)
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: deps.py
backend/scripts/: seed_assembly_templates.py
backend/tests/: conftest.py  test_ai_takeoff.py  test_ai_takeoff_integration.sh  test_bugfix_batch.py  test_condition_templates.py  test_title_block_region.py
(+419 files in other folders)
